<resources>
    <string name="app_name">StarBridges</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_connection">Failed connect to server.. Please try again!</string>
    <string name="header_login">TIME &amp; ATTENDANCE</string>
    <string name="sub_header_login">APPLICATION</string>
    <string name="action_register"><u>register your phone</u></string>
    <string name="start_end_date">Attendance</string>
    <string name="check_in_out">Out Of\nOffice</string>
    <string name="histories">Histories</string>
    <string name="medical">Medical</string>
    <string name="leave_cancelation">Leave\nCancelation</string>
    <string name="leave_request">Leave\nRequest</string>
    <string name="sign_out">Sign Out</string>
    <string name="loan">Loan</string>
    <string name="correction">Correction</string>
    <string name="overtime">Overtime</string>
    <string name="login_footer">Copyright 2018 PT Indocyber Global Teknologi\nAll Right Reserved</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="desc_logo_starbridge">logo starbridge</string>
    <string name="login_footer2">TextView</string>
    <string name="txt_name_correction">Name</string>
    <string name="txt_nik_correction">NIK</string>
    <string name="title_activity_draft">DraftActivity</string>
    <string name="date_picker">datePicker</string>
    <string name="reimbursement">REIMBURSE</string>

    <!-- Strings reminder -->
    <string name="reminder_title">Star Brigdes</string>
    <string name="reminder_pesan_masuk">Jam kerja akan di mulai, Pastikan sudah melakukan absensi masuk  !!!</string>
    <string name="reminder_pesan_pulang">Jam kerja akan berakhir, Pastikan melakukan absensi pulang !!!</string>

</resources>
