<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.starbridges.activity.LoginActivity">

    <!-- Login progress -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="match_parent"
            android:layout_height="118dp"
            android:padding="20dp"
            app:srcCompat="@drawable/logo_starbridges" />

        <TextView
            android:id="@+id/lbl_header_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_login"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lbl_sub_header_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sub_header_login"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/username_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txt_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_txt"
                    android:hint="@string/prompt_username"
                    android:inputType="textPersonName"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp" />

                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <EditText
                    android:id="@+id/txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_txt"
                    android:ems="10"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp" />

                <Button
                    android:id="@+id/btn_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_btn"
                    android:text="@string/action_sign_in"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_btn"
                    android:text="@string/action_register"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lbl_forgot_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/forgot_password"
                    android:textColor="@android:color/holo_blue_bright" />


            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/footer"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_alignParentBottom="true"
                android:background="#343eda"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/txtFooter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/login_footer"
                    android:textColor="#f4e8e8" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
